# mjolnir

./: .gitignore  README.md  mjölnir.py  pyproject.toml
.streamlit/: config.toml
app/: main.py
src/mjolnir/: ___config.py  ___mjolnirtypes.py  ___sessie.py  __init__.py  __main__.py  _gegevensdrager.py  _register.py  belading.py  constantes.py  enums.py  gegevensdrager.py  menu.py  oefening.py  paneel.py  register.py  resultaat.py  schema.py  sessie.py  setcode.py  test.py
src/mjolnir/basis/: __init__.py  register.py  setcode.py
src/mjolnir/kern/: __init__.py  config.py  enums.py  register.py  setcode.py
src/mjolnir/resultaat/: __init__.py  resultaat.py  resultaat_oefening.py  resultaat_set.py
src/mjolnir/schema/: __init__.py  schema.py  sjabloon.py
src/mjolnir/sessie/: __init__.py  belading.py  functies.py  paneel.py  programma.py  sessie.py
src/mjolnir/sessie/halter/: __init__.py  halter.py  halterschijf.py  halterstang.py
src/mjolnir/sessie/sessie/: __init__.py  sessie.py  sessie_oefening.py  sessie_set.py
