[project]
name = "mjolnir"
version = "1.0.0-rc1"
authors = [{name = "Tom Scheeper",email = "tomscheeper@gmail.com"}]

dependencies = [
    "dotenv>=0.9.9",
    "grienetsiis",
    "keyboard>=0.13.5",
    "psutil>=7.1.3",
    "streamlit>=1.44.1",
]

[tool.uv.sources]
grienetsiis = { git = "https://github.com/ButerBreaGrieneTsiis/grienetsiis.git", rev = "v2.0.0-rc1" }
